# nsdq_scarper

./: .gitignore  README.md  pyproject.toml
nsdq_scarper/: database.py  institutional_holdings_old.csv  main.py  models.py  scarper.py  tickers.csv  tickers2.csv
nsdq_scarper/sql_queries/: schema.sql
