[tool.poetry]
name = "nsdq-scarper"
version = "0.1.0"
description = ""
authors = ["x14119641 <daniel.gil.romero24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
polars = "^1.18.0"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
